--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
+<!DOCTYPE html>
 <html>
-<title>Clicker Clicker</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<head>
+    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
 
-<body onbeforeunload="return closingCode()">
-  <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  <div class='topbar'>
-    <a href='http://leemlam.github.io'>Clicker Clicker</a>
+    <title>محاسبه قیمت</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
+</head>
+<body>
+  <h1>محاسبه قیمت</h1>
+  <div id="button-container">
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-1" value="45000" data-name="دسر لیوانی">دسر لیوانی <br> 45,000</button>
+    
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-2" value="200000" data-name="(لطیفه، شو، ناپلئون، زبان خامه ای)">لطیفه، شو<br>ناپلئون<br>زبان خامه ای<br>200,000</button>
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-3" value="210000" data-name="رولت">رولت<br>210,000</button>
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-4" value="220000" data-name="تر خالص">تر خالص<br>220,000</button>
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-5" value="225000" data-name="تر مخلوط">تر مخلوط<br>225,000</button>
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-6" value="235000" data-name="(مافن، میوه ای)">مافن، میوه ای<br>235,000</button>
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-7" value="370000" data-name="پیچ انگشتی">پیچ انگشتی<br>370,000</button>
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-8" value="170000" data-name="کشمشی">کشمشی<br>170,000</button>
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-9" value="130000" data-name="(اهری، یزدی، روغنی)">اهری، یزدی، روغنی<br>130,000</button>
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-10" value="180000" data-name="دانمارکی">دانمارکی<br>180,000</button>
+    <button style="font-family: Vazirmatn, sans-serif;" id="button-11" value="170000" data-name="مشهدی">مشهدی<br>170,000</button>
+
+
+    <button style="font-family: Vazirmatn, sans-serif;" id="calculate-button">میانگین</button>
+    <button style="background-color: #BA0021; font-family: Vazirmatn, sans-serif;" id="clear-button">حذف</button>
   </div>
-    <center class='center'>
-      <h1 id='total'>LB: 0</h1>
-      <h5 id="click" style="font-family:trebuchet MS;">LB/click: 1 | LB/sec: 0</h5>
-      <img class="round" src="share-ic.png" width="150" onclick='clicked()'></img>
-      <br><br>
-      <button id='upgrade' class="round" onclick='upgrade("upgrade")' style="font-family:courier;">0-main upgrade: 15</button>
-      <br><br>
-      <button id='cat' class="round" onclick='upgrade("clicker cat")' style="font-family:courier;">0-clicker cat: 25 | +1/sec</button>
-      <br><br>
-      <button id='worker' class="round" onclick='upgrade("worker")' style="font-family:courier;">0-worker: 250 | +15/sec</button><br><br>
-      <button class="settings" onclick="save()">Save</button>
-      <button class="settings" onclick="load()">Load</button>
-      <button class="settings" onclick="reset()">Reset</button><br><br>
-    </center>
-  </link>
-</body>
-</meta>
+  <p id="result"></p>
 
+  <script src="script.js"></script>
+</body>
 </html>
